<resources>
    <string name="app_name">Asar Taxi</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="next">Далее</string>
    <string name="loading">Идет загрузка...</string>
    <string name="empty">Здесь ничего нет.</string>
    <string name="close">Закрыть</string>

    <string name="submit">Подтвердить</string>
    <string name="ready">Готово</string>
    <string name="code_sent">Код активации отправлен</string>
    <string name="repeat">Получить еще раз</string>
    <string name="choose_type">Для начала работы с приложением выберите тип аккаунта:</string>
    <string name="driver">Водитель</string>
    <string name="passenger">Пассажир</string>
    <string name="invalid">Пассажир с инвалидностью</string>
    <string name="spravka_1">Для подтверждения аккаунта, необходимо отправить справку об инвалидности.</string>
    <string name="spravka_2">Данная операция необходима для заказа волонтерских поездок.</string>
    <string name="spravka_3">Сфотографируйте или прикрепите справку.</string>
    <string name="back">Назад</string>
    <string name="accept">Принять</string>
    <string name="completed">Выполненные</string>
    <string name="orders">Заказы</string>

    <string name="city">Город</string>
    <string name="cabinet">Мой кабинет</string>
    <string name="car_options">Опции авто</string>
    <string name="support">Техподдержка</string>
    <string name="settings">Настройки</string>
    <string name="client_mode">Режим клиента</string>
    <string name="favorites">Избранные места</string>
    <string name="trips">Поездки</string>

    <string name="account">Лицевой счет: </string>
    <string name="balance">Баланс: </string>
    <string name="paid_until">Оплачено до: </string>
    <string name="add_money">Пополнить счет</string>
    <string name="not_active">Смена не активирована</string>
    <string name="start_work">Активировать смену</string>
    <string name="end_work">Закончить смену</string>

    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="phone_number">Номер телефона</string>
    <string name="politics">Политика конфиденциальности</string>
    <string name="notifications">Уведомления</string>
    <string name="log_out">Выйти из аккаунта</string>

    <string name="order_taxi">Заказать такси</string>
    <string name="from">Откуда</string>
    <string name="to">Куда</string>
    <string name="price">Цена</string>
    <string name="enter_price">Введите цену</string>

    <string name="where_to">Куда вы едете?</string>
    <string name="show_on_map">Указать на карте</string>
    <string name="where_from">Где вы находитесь?</string>

    <string name="add_place">Добавить место</string>

    <string name="wrong_address">Клиент указал неверный адрес</string>
    <string name="payment_not_accepted">Платеж не был принят</string>
    <string name="other">Другое</string>

    <string name="enable_location">Пожалуйста включите доступ к местоположению телефона для продолжения работы с приложением.</string>
    <string name="tap_to_choose">Нажмите на карту чтобы выбрать место</string>

    <string name="turn_on">Включить</string>
    <string name="cancel">Отмена</string>


    <string name="car_type">Тип машины</string>
    <string name="with_accompany">С сопровождением</string>
    <string name="wheelchair">На коляске</string>
    <string name="commentary">Комментарии</string>

    <string name="time">Через сколько вы будете у клиента?</string>
    <string name="arrived">Подъехал</string>

    <string name="voluntary">Волонтерская поездка</string>
    <string name="order_accepted">Заявка принята</string>

    <string name="change_price">Изменить цену</string>

    <string name="car">Машина</string>
    <string name="car_number">Номер машины</string>
    <string name="rating">Рейтинг</string>

    <string name="arrived2">Приехали!</string>
    <string name="how_do_you_rate">Как вы оцените поездку?</string>
    <string name="write_comment">Напишите отзыв</string>

    <string-array name="gender_array">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
    <string-array name="car_array">
        <item>Toyota</item>
        <item>Lexus</item>
        <item>Mini</item>
    </string-array>
    <string-array name="car_model_array">
        <item>Camry</item>
        <item>неКамри</item>
    </string-array>
    <string-array name="car_type_array">
        <item>Седан</item>
        <item>Джип</item>
        <item>Грузовичок</item>
    </string-array>
    <string name="title_activity_driver_main">DriverMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_passenger_maps">Map</string>
</resources>
