<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vlimv.taxi.CabinetFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="@dimen/small_text"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:textSize="@dimen/small_text"
            android:layout_marginTop="@dimen/small_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paid_until"
            android:textSize="@dimen/small_text"
            android:layout_marginTop="@dimen/small_margin"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:elevation="@dimen/normal_elevation"
            android:background="@drawable/ripple_effect_blue"
            android:text="@string/add_money"
            android:id="@+id/paymentButton"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/normal_text"
            android:textAllCaps="false"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_active"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_margin"/>
        <ToggleButton
            android:id="@+id/toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/normal_elevation"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/white"
            android:background="@drawable/toggle_button"
            android:textOn="@string/end_work"
            android:textOff="@string/start_work"/>
    </LinearLayout>
</FrameLayout>
