<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/normal_padding"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_text"
        android:text="@string/enable_location"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_cancel"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:textColor="@android:color/holo_red_dark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_turn_on"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:text="@string/turn_on"/>
    </LinearLayout>
</LinearLayout>