<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vlimv.taxi.AccountTypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_type"
            android:textSize="@dimen/large_text"
            android:layout_marginTop="@dimen/xlarge_margin"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/driver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver"
            android:textSize="@dimen/large_text"
            android:layout_marginTop="@dimen/large_space"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:clickable="true"/>
        <TextView
            android:id="@+id/passenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passenger"
            android:textSize="@dimen/large_text"
            android:layout_marginTop="@dimen/large_space"
            android:textColor="#111111"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/invalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid"
            android:textSize="@dimen/large_text"
            android:layout_marginTop="@dimen/large_space"
            android:textColor="#111111"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:clickable="true"/>

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            android:elevation="@dimen/normal_elevation"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_button"
            android:padding="@dimen/fab_padding"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/xlarge_margin"
            android:tint="@color/white"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            android:clickable="true"/>
    </LinearLayout>
</RelativeLayout>
