<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vlimv.taxi.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/large_space">

        <EditText
            android:id="@+id/editText"
            android:layout_marginTop="@dimen/xlarge_margin"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="number"
            />
        <Button
            android:id="@+id/button"
            android:background="@drawable/ripple_effect"
            android:layout_marginTop="@dimen/normal_margin"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_sent"
            android:layout_marginTop="@dimen/normal_margin"
            android:textSize="@dimen/normal_text"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat"
            android:layout_marginTop="@dimen/normal_margin"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
